2008-09-01  Johannes Schmid  <jhs@idefix>

	Patch from  Mikel Olasagasti <hey_neken@mundurat.net>
	* configure.in:
	#548984 – Use AC_HELP_STRING macro

2008-08-29  Naba Kumar  <naba@gnome.org>

	Patch from: James Liggett  <jrliggett@cox.net>

	* plugins/git/Makefile.am:
	* plugins/git/anjuta-git.glade:
	* plugins/git/anjuta-git.ui:
	* plugins/git/git-add-command.c:
	* plugins/git/git-add-command.h:
	* plugins/git/git-add-dialog.c (on_fm_git_add):
	* plugins/git/git-add-dialog.h:
	* plugins/git/git-branch-checkout-command.c:
	* plugins/git/git-branch-checkout-command.h:
	* plugins/git/git-branch-list-command.c:
	* plugins/git/git-branch-list-command.h:
	* plugins/git/git-branch.c:
	* plugins/git/git-branch.h:
	* plugins/git/git-cat-blob-command.c (git_cat_blob_command_init),
	(git_cat_blob_command_finalize), (git_cat_blob_command_run),
	(git_cat_blob_command_class_init), (git_cat_blob_command_new):
	* plugins/git/git-cat-blob-command.h:
	* plugins/git/git-cat-file-menu.c (on_cat_command_finished),
	(on_list_tree_command_finished), (git_cat_file),
	(on_log_menu_git_cat_file), (git_cat_file_menu_set_sensitive):
	* plugins/git/git-cat-file-menu.h:
	* plugins/git/git-fetch-command.c:
	* plugins/git/git-fetch-command.h:
	* plugins/git/git-file-command.c:
	* plugins/git/git-file-command.h:
	* plugins/git/git-ignore-command.c:
	* plugins/git/git-ignore-command.h:
	* plugins/git/git-list-tree-command.c (git_list_tree_command_init),
	(git_list_tree_command_finalize), (git_list_tree_command_run),
	(git_list_tree_command_handle_output),
	(git_list_tree_command_class_init), (git_list_tree_command_new),
	(git_list_tree_command_get_blobs):
	* plugins/git/git-list-tree-command.h:
	* plugins/git/git-log-command.c (git_log_command_finalize),
	(git_log_command_run), (git_log_command_new):
	* plugins/git/git-log-command.h:
	* plugins/git/git-log-dialog.c (on_log_command_finished),
	(on_ref_command_finished), (on_log_view_button_clicked),