@@ -1,3 +1,9 @@
+2008-09-01  Sébastien Granjoux  <seb.sfo@free.fr>
+
+	* plugins/gdb/plugin.c,
+	plugins/run-program/execute.c:
+	Use gnome-terminal if terminal plugin is missing
+
 2008-09-01  Johannes Schmid  <jhs@idefix>
 
 	Patch from  Mikel Olasagasti <hey_neken@mundurat.net>
